# lighthouse_ice

./: .gitignore  LICENSE  README.md  _quarto.yml  index.qmd  pyproject.toml  setup.py
_notebooks/: 0.0-collect-data.ipynb  1.0-process-data.ipynb  1.0-process-data_backup.ipynb  4.0-narrative-report.ipynb  full_report.ipynb
data/processed/: trump_first_term.csv
docs/: index.html  search.json
docs/_notebooks/: 0.0-collect-data.ipynb  full_report.ipynb
outputs/: .~lock.arrests_frequency_tables.csv#  filtered_us_counties.xlsx
outputs/tables/: .~lock.trump_second_term_apprehension_method_counts.csv#  arrests_filtered_table.csv  biden_term_agegroup_gender_pivot.csv  biden_term_apprehension_method_counts.csv  biden_term_citizenship_gender_pivot.csv  biden_term_country_aor_counts.csv  biden_term_country_aor_percent.csv  biden_term_country_method_counts.csv  biden_term_country_method_percent.csv  biden_term_tidy_country_aor.csv  pivot_age_group.csv  pivot_age_group_count_percent.csv  pivot_age_group_percent.csv  pivot_citizenship_gender.csv  pivot_citizenship_gender_count_percent.csv  pivot_citizenship_gender_percent.csv  pivot_gender.csv  pivot_gender_count_percent.csv  pivot_gender_percent.csv  trump_first_term_agegroup_gender_pivot.csv  trump_second_term_agegroup_gender_pivot.csv  trump_second_term_apprehension_method_counts.csv  trump_second_term_citizenship_gender_pivot.csv  trump_second_term_country_aor_counts.csv  trump_second_term_country_aor_percent.csv  trump_second_term_country_method_counts.csv  trump_second_term_country_method_percent.csv  (+1 more)
(+3 files in other folders)
