[tool.poetry]
name = "lighthouse_ice"
version = "0.1.0"
description = "Documentation for ICE data analysis"
authors = ["Gibran Mena-Aguilar"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "*"
nbformat = "*"
pandas = "*"
numpy = "*"
requests = "*"
plotly = "*"
openpyxl = "*"
pyxlsb = "^1.0.10"
fuzzywuzzy = "0.18.0"
fuzzymatcher = "^0.0.6"
matplotlib = "^3.10.5"
seaborn = "^0.13.2"
kaleido = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
